Found Uni. Waterloos plugin so I yoinked their air density function which helped. I then changed the simulation, controller, and listener files to mimic PID but Idk if I am going to stick with this. Lastly added some test files to make sure the code is working but I need to iron out alot more bugs